# Fleet-Relay

./: .gitignore  CLAUDE.md
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(auth)/: layout.tsx
app/src/app/(auth)/login/: page.tsx
app/src/app/(auth)/signup/: page.tsx
app/src/app/dashboard/: dashboard-client.tsx  layout.tsx  loading.tsx  page.tsx
app/src/app/dashboard/connections/: connections-client.tsx  page.tsx
app/src/app/dashboard/drivers/: drivers-client.tsx  page.tsx  (+1 more)
app/src/app/landing-v9/: page.tsx
app/src/app/pending-approval/: page.tsx
app/src/app/pricing/: page.tsx
app/src/components/dashboard/: sidebar.tsx
app/src/components/landing/: cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  metrics.tsx  navbar.tsx  pricing.tsx
app/src/components/ui/: checkbox.tsx  dropdown-menu.tsx  skeleton.tsx
app/src/hooks/: use-realtime-refresh.ts
app/src/lib/: types.ts
app/src/lib/supabase/: middleware.ts  server.ts  types.ts
design-showcase/: index.html  package-lock.json  package.json
design-showcase/src/: App.jsx  index.css
docs/prd/: PRD-00-product-overview.md  PRD-01-auth-roles-teams.md  PRD-02-telegram-bot.md  PRD-03-ticketing-system.md  PRD-04-scoring-gamification.md  PRD-05-performance-tracking.md  PRD-06-dashboard-analytics.md  PRD-07-drivers.md  PRD-08-database-schema.md  PROJECT-CHECKLIST.md  README.md
telegram-bot/: .env.example  README.md  pyproject.toml
telegram-bot/src/: bot.py  classifier.py  config.py  main.py  models.py  storage.py.bak  supabase_storage.py
(+14 files in other folders)
